:lipstick: Text in modals not visible using dark mode (issue #51)

--- a/resources/sass/_dark.scss
+++ b/resources/sass/_dark.scss
@@ -73,4 +73,11 @@ body.dark {
         @extend .bg-dark;
         @extend .text-white;
     }
+
+    .modal {
+        .modal-content {
+            @extend .bg-dark;
+            @extend .text-white;
+        }
+    }
 }
